[package]
name = "file_api"
version = "0.6.6"
authors = ["Marc-Antoine Arnaud <marc.antoine@nomalab.com>"]
description = """
Library to abstract read. Based on prefix URL, it select the adapted reader (HTTP or local file system).
"""
license = "MIT"
repository = "https://github.com/nomalab/rs_file_api"
documentation = "https://docs.rs/file_api"

[dependencies]
log = "0.4.1"
hyper = "^0.12"
hyperx = "^0.15"
reqwest = "^0.9"

[dev-dependencies]
futures = "^0.1"
